{
    "name": "MarioActions",
    "maps": [
        {
            "name": "Main Menu",
            "id": "5712b099-5e1e-4b29-8f34-942056b6e60e",
            "actions": [
                {
                    "name": "Click",
                    "type": "Button",
                    "id": "051cfb57-b811-4bb3-be25-53046d3ccc83",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "498ee756-39c5-4e32-869f-5ab09b9b0963",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "MarioActions",
                    "action": "Click",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Gameplay",
            "id": "205c2bf3-4e89-4353-bee7-5cd97716b702",
            "actions": [
                {
                    "name": "Move",
                    "type": "Value",
                    "id": "a9e334d4-ef8a-4d3b-a73e-f9238ed15e5c",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Jump",
                    "type": "Button",
                    "id": "4cdf29c8-183e-4011-8c47-3068939f7ad0",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "JumpHold",
                    "type": "Button",
                    "id": "dc43c2a4-91e2-44ce-937e-381299e1d56d",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Click",
                    "type": "Button",
                    "id": "15b51653-cef8-4764-bc83-aaea6c923890",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Point",
                    "type": "Value",
                    "id": "1c6bbcb8-33ae-47c5-bc0e-d409e6eafdb9",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Fire",
                    "type": "Button",
                    "id": "1613284d-b22f-4a18-b0f5-825a0d6a5365",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "9e3ff1b6-1b8f-454d-b1db-9a7942689322",
                    "path": "<Keyboard>/space",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "MarioActions",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "16fab690-55fd-472f-8902-c29eb2eaf581",
                    "path": "<Keyboard>/space",
                    "interactions": "Hold(duration=0.2)",
                    "processors": "",
                    "groups": "MarioActions",
                    "action": "JumpHold",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "6be9ac07-55bb-46b8-bb36-7f7635a5844b",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "MarioActions",
                    "action": "Click",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "One Modifier",
                    "id": "6a9edb09-6374-4124-a366-a8989054a026",
                    "path": "OneModifier",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Point",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "modifier",
                    "id": "6179c42b-6ef9-4b59-84de-21a7e6c59741",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "MarioActions",
                    "action": "Point",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "binding",
                    "id": "09e9bfdf-d835-441f-8f68-5ac8f0eb24b9",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "MarioActions",
                    "action": "Point",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "1D Axis",
                    "id": "6efcd2c4-788d-4b4d-8ee5-168c15ac628a",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "39f2dd99-29e1-4604-9731-dabeb40304c8",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "MarioActions",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "1241eea8-e15f-46c2-9579-18f01d455446",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "MarioActions",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "8bf17ebb-a29f-4eb7-bbed-d56e71d22982",
                    "path": "<Keyboard>/z",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "Fire",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "MarioActions",
            "bindingGroup": "MarioActions",
            "devices": [
                {
                    "devicePath": "<Keyboard>",
                    "isOptional": false,
                    "isOR": false
                },
                {
                    "devicePath": "<Mouse>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}